--- a/Machine Learning.html
+++ b/Machine Learning.html
@@ -41,6 +41,31 @@
           <p></p>
         </div>
       </section>
+      <section class="dropdownContainer">
+        <div class="dropdown">
+          <input type="text" class="textBox" placeholder="Tag" readonly />
+          <div class="option">
+            <div onclick="showDropdown('No filtrar')">
+              <ion-icon name="globe-outline"></ion-icon> No filtrar
+            </div>
+            <div onclick="showDropdown('Preparacion de datos')">
+              <ion-icon name="color-wand-outline"></ion-icon> Preparacion de
+              datos
+            </div>
+            <div onclick="showDropdown('Machine Learning')">
+              <ion-icon name="extension-puzzle-outline"></ion-icon> Machine
+              Learning
+            </div>
+            <div onclick="showDropdown('Analisis de datos')">
+              <ion-icon name="bar-chart-outline"></ion-icon> Analisis de datos
+            </div>
+            <div onclick="showDropdown('Caso de estudio')">
+              <ion-icon name="library-outline"></ion-icon> Caso de estudio
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section class="cards-wrapper">
         <div class="card-grid-space">
           <div class="num"></div>
@@ -99,6 +124,8 @@
               <div class="tags">
                 <div class="tag">Data Analysis</div>
                 <div class="tag">Python</div>
+                <div class="tag" style="display: none">Analisis de datos</div>
+                <div class="tag" style="display: none">Caso de estudio</div>
               </div>
             </div>
           </a>
@@ -116,6 +143,8 @@
               <div class="date">05 Sep 2021</div>
               <div class="tags">
                 <div class="tag">Conceptos</div>
+                <!-- prettier-ignore -->
+                <div class="tag" style="display: none">Preparacion de datos</div>
               </div>
             </div>
           </a>
@@ -139,6 +168,10 @@
               <div class="tags">
                 <div class="tag">Data Analysis</div>
                 <div class="tag">Python</div>
+                <div class="tag" style="display: none">Analisis de datos</div>
+                <!-- prettier-ignore -->
+                <div class="tag" style="display: none">Preparacion de datos</div>
+                <div class="tag" style="display: none">Caso de estudio</div>
               </div>
             </div>
           </a>
@@ -200,6 +233,10 @@
               <div class="tags">
                 <div class="tag">Machine Learning</div>
                 <div class="tag">Data Analysis</div>
+                <div class="tag" style="display: none">Analisis de datos</div>
+                <!-- prettier-ignore -->
+                <div class="tag" style="display: none">Preparacion de datos</div>
+                <div class="tag" style="display: none">Caso de estudio</div>
               </div>
             </div>
           </a>
@@ -221,6 +258,7 @@
               <div class="tags">
                 <div class="tag">Machine Learning</div>
                 <div class="tag">Clustering</div>
+                <div class="tag" style="display: none">Caso de estudio</div>
               </div>
             </div>
           </a>
@@ -264,5 +302,60 @@
         </div>
       </section>
     </div>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+
+    <script>
+      function showDropdown(anything) {
+        document.querySelector(".textBox").value = anything;
+        filterSearch();
+      }
+
+      let dropdown = document.querySelector(".dropdown");
+      dropdown.onclick = function () {
+        dropdown.classList.toggle("active");
+      };
+    </script>
+
+    <script>
+      function filterSearch() {
+        let filter = document.querySelector(".textBox").value;
+        let cards = document.querySelectorAll(".card-grid-space");
+
+        if (filter === "No filtrar") {
+          for (let i = 0; i < cards.length; i++) {
+            cards[i].classList.remove("is-hidden");
+          }
+          return;
+        }
+        for (let i = 0; i < cards.length; i++) {
+          cards[i].classList.remove("is-hidden");
+        }
+        //Use innerText if all contents are visible
+        //Use textContent for including hidden elements
+        for (let i = 0; i < cards.length; i++) {
+          let elements = cards[i].querySelector(".tags").children;
+          let modified = false;
+
+          for (let i = 0; i < elements.length; i++) {
+            console.log(elements[i].textContent);
+            if (elements[i]?.textContent === filter) {
+              cards[i].classList.remove("is-hidden");
+              modified = true;
+            }
+          }
+          if (!modified) {
+            cards[i].classList.add("is-hidden");
+          }
+        }
+      }
+    </script>
   </body>
 </html>
