--- a/Machine Learning.html
+++ b/Machine Learning.html
@@ -48,6 +48,9 @@
             <div onclick="showDropdown('No filtrar')">
               <ion-icon name="globe-outline"></ion-icon> No filtrar
             </div>
+            <div onclick="showDropdown('Conceptos')">
+              <ion-icon name="book-outline"></ion-icon> Conceptos
+            </div>
             <div onclick="showDropdown('Preparacion de datos')">
               <ion-icon name="color-wand-outline"></ion-icon> Preparacion de
               datos
@@ -191,6 +194,7 @@
               <div class="date">01 Oct 2021</div>
               <div class="tags">
                 <div class="tag">Machine Learning</div>
+                <div class="tag" style="display: none">Conceptos</div>
               </div>
             </div>
           </a>
@@ -210,6 +214,7 @@
               <div class="date">11 Oct 2021</div>
               <div class="tags">
                 <div class="tag">Machine Learning</div>
+                <div class="tag" style="display: none">Conceptos</div>
               </div>
             </div>
           </a>
