Added Adult income analysis

--- a/Machine Learning.html
+++ b/Machine Learning.html
@@ -268,6 +268,26 @@
             </div>
           </a>
         </div>
+        <div class="card-grid-space">
+          <div class="num"></div>
+          <a
+            class="card"
+            href="Machine Learning/ModeladoAdultIncome.html"
+            style="
+              --bg-img: url('Machine Learning/ModeladoAdultIncome_files/adult1.jpg');
+            "
+          >
+            <div>
+              <h1>Evaluacion de modelos - Adult Income</h1>
+              <p>El Census Bureau de EEUU realizó un censo en 1994...</p>
+              <div class="date">01 Nov 2021</div>
+              <div class="tags">
+                <div class="tag">Machine Learning</div>
+                <div class="tag">Evaluacion</div>
+              </div>
+            </div>
+          </a>
+        </div>
       </section>
       <section class="extra">
         <div class="title">
