--- a/Machine Learning.html
+++ b/Machine Learning.html
@@ -280,7 +280,7 @@
             <div>
               <h1>Evaluacion de modelos - Adult Income</h1>
               <p>El Census Bureau de EEUU realizó un censo en 1994...</p>
-              <div class="date">01 Nov 2021</div>
+              <div class="date">01 Dic 2021</div>
               <div class="tags">
                 <div class="tag">Machine Learning</div>
                 <div class="tag">Evaluacion</div>
