--- a/index.html
+++ b/index.html
@@ -1,61 +1,65 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Directory Contents</title>
+    <meta name="viewport" content="width=device/width, initial-scale=1.0" />
+    <meta charset="utf8" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+      integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link href="indexStyle.css" type="text/css" rel="stylesheet" />
+  </head>
 
-    <head>
-        <title>Directory Contents</title>
-        <meta name="viewport" content="width=device/width, initial-scale=1.0">
-        <meta charset="utf8" />        
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="indexStyle.css" type="text/css" rel="stylesheet"  />
-    </head>
-
-    <body>    
-        <header>
-            <div class="logo">AGUSTIN PAREDES</div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="Machine Learning.html">Machine Learning</a></li>
-                    <li><a href="#">Proximamente ...</a></li>
-                </ul>
-            </nav>
-            <div class="menu-toggle" onclick="show()"><i class="fa fa-bars" aria-hidden="true"></i></div>
-        </header>
-        <script>
-            function show(){
-                let toggle = document.querySelector('.menu-toggle');
-                let navigation= document.querySelector('nav');
-                navigation.classList.toggle('active');
-            }
-        </script>          
-        <div class="container">
-            <section class="banner" id="banner">
-                <div class="content">
-                    <div class="imgBx">
-                        <img src= "user.jpg">
-                    </div> 
-                    <h3>Agustin Paredes</h3>
-                    <p>Analista informático. DevOps. Machine Learning enthusiast</p>
-                    <a href="Files/CV Agustin Paredes.pdf" class="btn"> Descarga mi CV</a>
-                    <u1 class="socialMedia">
-                        <!-- <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> -->
-                        <li><a href="https://www.linkedin.com/in/agustin-paredes-balerio-4aa5541b0/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="https://github.com/aparedes1998"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                    </u1>                   
-                </div>            
-            </section>
-        </div> 
-            
-        <!-- <div id="contents">
-            <ul id = "links">
-                <li class="linkToArticle" id="l1"><a href="Pages\Introduccion a machine learning.html"> Introducción a Machine Learning</a></li>
-                <li class="linkToArticle" id="l2"><a href="Pages\Herramientas.html"> Herramientas gratuitas para el análisis de datos</a></li>
-                <li class="linkToArticle" id="l3"><a href="Pages\Caso de estudio Dataset Iris.html"> Caso de estudio: Analisis dataset Iris</a></li>
-                <li class="linkToArticle" id="l4"><a href="Pages\Preparacion de datos.html"> Preparación de datos</a></li>
-                <li class="linkToArticle" id="l5"><a href="Pages\CasoDeEstudioTitanic.html"> Caso de estudio: Analisis dataset Titanic con Sklearn</a></li>
-            </ul>
-        </div> -->
-                
-    </body>
-
+  <body>
+    <header>
+      <div class="logo">AGUSTIN PAREDES</div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="Machine Learning.html">Machine Learning</a></li>
+          <li><a href="#">Proximamente ...</a></li>
+        </ul>
+      </nav>
+      <div class="menu-toggle" onclick="show()">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </div>
+    </header>
+    <script>
+      function show() {
+        let toggle = document.querySelector(".menu-toggle");
+        let navigation = document.querySelector("nav");
+        navigation.classList.toggle("active");
+      }
+    </script>
+    <div class="container">
+      <section class="banner" id="banner">
+        <div class="content">
+          <div class="imgBx">
+            <img src="user.jpg" />
+          </div>
+          <h3>Agustin Paredes</h3>
+          <p>Analista informático. DevOps. Machine Learning enthusiast</p>
+          <a href="Files/CV Agustin Paredes.pdf" class="btn"> Descarga mi CV</a>
+          <u1 class="socialMedia">
+            <!-- <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> -->
+            <li>
+              <a
+                href="https://www.linkedin.com/in/agustin-paredes-balerio-4aa5541b0/"
+                ><i class="fa fa-linkedin" aria-hidden="true"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://github.com/aparedes1998"
+                ><i class="fa fa-github" aria-hidden="true"></i
+              ></a>
+            </li>
+          </u1>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
